--- a/app/views/irm/reports/edit_custom_program.html.erb
+++ b/app/views/irm/reports/edit_custom_program.html.erb
@@ -1,71 +1,79 @@
 <%= common_title(:action_meaning=>t(:label_irm_report_custom)) %>
-<%= form_for(@report,:url=>{:action=>"update_custom_program"},:builder => LabellingFormBuilder) do |f| %>
-    <%= page_block("newImpact") do |pb|%>
-        <%= pb.page_block_header(:title=>t(:label_irm_report_custom)) do %>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
+<%= form_for(@report,:url=>{:action=>"update_custom_program"},:builder => CustomFormBuilder) do |f| %>
+    <% content_for :form_block_common   do%>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col"><label for="report_name"><%=t(:label_irm_report_name)%></label></td>
+          <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"report_name"%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="report_code"><%=t(:label_irm_report_code)%></label></td>
+          <td class="data-col"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"report_code"%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+         <tr>
+          <td class="label-col"><label for="program"><%=t(:label_irm_report_program)%></label></td>
+          <td class="data-col"><label><%=@report.program%></label> <%=f.hidden_field(:program)  %></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="report_folder_id"><%=t(:label_irm_report_report_folder)%></label></td>
+          <td class="data-col"><%=f.blank_select :report_folder_id,available_report_folder,{} ,:required=>true,:id=>"report_folder_id"%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="report_auto_run_flag"><%=t(:label_irm_report_auto_run_flag)%></label></td>
+          <td class="data-col">
+            <label for="display_flag"><%= f.check_box(:auto_run_flag) %></label>
           </td>
-          <td class="pbHelp">
-          </td>
-
-        <% end %>
-       <%= pb.page_block_body do %>
-            <%= error_for @report%>
-            <%= sub_page_block("baseInfo") do |spb|%>
-                <%= spb.sub_page_block_header(:title=>t(:label_common_info),:first=>true)%>
-                <%= spb.sub_page_block_body do %>
-                  <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                    <tbody>
-                      <tr>
-                        <td class="labelCol"><label for="report_name"><%=t(:label_irm_report_name)%></label></td>
-                        <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"report_name"%></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                      <tr>
-                        <td class="labelCol"><label for="report_code"><%=t(:label_irm_report_code)%></label></td>
-                        <td class="dataCol"><%=f.text_field :code, :required=>true ,:irm_uppercase=>true,:id=>"report_code"%></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                       <tr>
-                        <td class="labelCol"><label for="program"><%=t(:label_irm_report_program)%></label></td>
-                        <td class="dataCol"><%=@report.program%> <%=f.hidden_field(:program)  %></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                      <tr>
-                        <td class="labelCol"><label for="report_folder_id"><%=t(:label_irm_report_report_folder)%></label></td>
-                        <td class="dataCol"><%=f.blank_select :report_folder_id,available_report_folder,{} ,:required=>true,:id=>"report_folder_id"%></td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                      <tr>
-                        <td class="labelCol"><label for="report_auto_run_flag"><%=t(:label_irm_report_auto_run_flag)%></label></td>
-                        <td class="dataCol">
-                          <label for="display_flag"><%= f.check_box(:auto_run_flag) %></label>
-                        </td>
-                        <td class="labelCol empty">&nbsp;</td>
-                        <td class="dataCol empty">&nbsp;</td>
-                      </tr>
-                      <tr>
-                        <td class="labelCol"><label for="report_description"><%=t(:label_irm_report_description)%></label></td>
-                        <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"report_description"%></td>
-                      </tr>
-
-                    </tbody>
-                  </table>
-            <% end %>
-          <% end %>
-
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="report_description"><%=t(:label_irm_report_description)%></label></td>
+          <td class="data-3col" colspan="3"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"report_description",:class=>"input-xlarge" %></td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel),{},{:class=>"btn cancel"}%>
+  <% end %>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%=t(:label_irm_report_custom)%></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
+    <%= error_for @report%>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
         </div>
-        <%= pb.page_block_footer do %>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        <% end %>
-    <% end %>
-    <% end %>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
+  </div>
 <% end %>
