--- a/app/views/irm/my_password/edit_password.html.erb
+++ b/app/views/irm/my_password/edit_password.html.erb
@@ -1,94 +1,96 @@
 <%= common_title(:model_meaning=>t(:label_irm_person_info),:show_data=>t(:edit_password)) %>
-<%= form_for(@person,:url=>{:action=>"update_password"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@person,:url=>{:action=>"update_password"},:builder => CustomFormBuilder) do |f| %>
+
+
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_identity_edit_password)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button floatright"><%= link_to t(:cancel), {:action => "index"},:zone=>"system_content"%></div>            
-          </td>
-        </tr>
+          <% if Irm::PasswordPolicy.expire?(Irm::Person.current.password_updated_at,@person.opu_id) %>
+            <tr>
+              <td class="label-col"><label></label></td>
+              <td class="data-col"><label style="color:red;"><%=t(:label_irm_psw_policy_expire)%></label></td>
+              <td class="label-col empty">&nbsp;</td>
+              <td class="data-col empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="label-col"><label><%=(t :label_irm_psw_policy_expire_in)%></label></td>
+              <td class="data-col"><%= Irm::PasswordPolicy.current(@person.opu_id).expire_in%></td>
+              <td class="label-col empty">&nbsp;</td>
+              <td class="data-col empty">&nbsp;</td>
+            </tr>
+             <tr>
+              <td class="label-col"><label><%=(t :label_irm_psw_policy_last_upadated_at)%></label></td>
+              <td class="data-col"><%= format_date(Irm::Person.current.password_updated_at)%></td>
+              <td class="label-col empty">&nbsp;</td>
+              <td class="data-col empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="label-col"><label><%=(t :label_irm_psw_policy_requirement)%></label></td>
+              <td class="data-col"  colspan="3"><%= Irm::PasswordPolicy.current(@person.opu_id).validate_message%></td>
+            </tr>
+          <% end %>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_identity_old_password)%></label></td>
+            <td class="data-col"><%=f.password_field :old_password, :size=>40,:required=>true%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_identity_new_password)%></label></td>
+            <td class="data-col"><%=f.password_field :password, :size=>40,:required=>true%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_irm_identity_new_password_confirmation)%></label></td>
+            <td class="data-col"><%=f.password_field :password_confirmation, :size=>40,:required=>true%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action => "index"},:zone=>"system_content",:class => "btn cancel"%>
+  <% end %>
+
+
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_irm_identity_edit_password)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
     <%= error_for @person%>
     <%= flash_notice %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+
     </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <% if Irm::PasswordPolicy.expire?(Irm::Person.current.password_updated_at,@person.opu_id) %>
-              <tr>
-                <td class="labelCol"><label></label></td>
-                <td class="dataCol"><label style="color:red;"><%=t(:label_irm_psw_policy_expire)%></label></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-              <tr>
-                <td class="labelCol"><label><%=(t :label_irm_psw_policy_expire_in)%></label></td>
-                <td class="dataCol"><%= Irm::PasswordPolicy.current(@person.opu_id).expire_in%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-               <tr>
-                <td class="labelCol"><label><%=(t :label_irm_psw_policy_last_upadated_at)%></label></td>
-                <td class="dataCol"><%= format_date(Irm::Person.current.password_updated_at)%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-              <tr>
-                <td class="labelCol"><label><%=(t :label_irm_psw_policy_requirement)%></label></td>
-                <td class="dataCol" width="82%" colspan="3"><%= Irm::PasswordPolicy.current(@person.opu_id).validate_message%></td>
-              </tr>
-            <% end %>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_identity_old_password)%></label></td>
-              <td class="dataCol"><%=f.password_field :old_password, :size=>40,:required=>true%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_identity_new_password)%></label></td>
-              <td class="dataCol"><%=f.password_field :password, :size=>40,:required=>true%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_irm_identity_new_password_confirmation)%></label></td>
-              <td class="dataCol"><%=f.password_field :password_confirmation, :size=>40,:required=>true%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
+
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button floatright"><%= link_to t(:cancel), {:action => "index"},:zone=>"system_content"%></div>            
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+
 <% end %>
